--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           <li>Social engagement</li>
           <li>Native performance</li>
         </ul>
-        <a href="https://play.google.com/store/apps/details?id=com.lancelot.kismaze" class="play-store-badge">
+        <a href="https://github.com/lancelotech-app/lancelotech/releases/tag/1" class="play-store-badge">
           Download
         </a>
       </div>
@@ -164,7 +164,7 @@
           <li>Event creation</li>
           <li>Private messaging</li>
         </ul>
-        <a href="https://play.google.com/store/apps/details?id=com.lancelot.emmeffe" class="play-store-badge">
+        <a href="https://github.com/lancelotech-app/lancelotech/releases/tag/1" class="play-store-badge">
           Download
         </a>
       </div>
@@ -183,7 +183,7 @@
           <li>Community challenges</li>
           <li>Social features</li>
         </ul>
-        <a href="https://play.google.com/store/apps/details?id=com.lancelot.pantheon" class="play-store-badge">
+        <a href="https://https://github.com/lancelotech-app/lancelotech/releases/tag/1" class="play-store-badge">
           Download
         </a>
       </div>
@@ -225,4 +225,5 @@
   </footer>
 
 </body>
+
 </html>
